fix: initial page load and adding dotenv file

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment variables
-.env
+#.env
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
