--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "FE-build": "tsc && vite build",
     "test": "vitest",
     "BE-start": "ts-node --esm ./json-server/index.ts",
-    "start": "concurrently --kill-others \"npm:BE-start\" \"npm:FE-start\""
+    "start": "npm run BE-start & sleep 2 && npm run FE-start"
   },
   "dependencies": {
     "@faker-js/faker": "8.0.2",
